增加了下载客户端代码的api，并针对此修改了测试
